# fakestore-backend

./: .gitignore  db.sqlite3  exemplo.py  pyproject.toml  requirements.txt  send_fcm.py  serviceAccount.json
app/: settings.py  urls.py
core/: admin.py  authentication.py
core/migrations/: 0001_initial.py  0002_category.py  0003_alter_category_options.py  0004_product.py  0005_category_icon_order_orderitem.py
core/models/: __init__.py  category.py  user.py
core/serializers/: __init__.py  category.py  product.py
core/views/: __init__.py  product.py  user.py
